RESOLVED FIXED36392
[Qt] Back-forward list dumping is incorrect
https://bugs.webkit.org/show_bug.cgi?id=36392
Summary [Qt] Back-forward list dumping is incorrect
Csaba Osztrogonác
Reported 2010-03-19 14:32:36 PDT
fast/loader/frame-src-change-added-to-history.html fails, because back-forward list dumping is incorrect in Qt-DRT. ( implemented by DumpRenderTree::dumpBackForwardList() ) http://build.webkit.org/results/Qt%20Linux%20Release/r56266%20%288803%29/fast/loader/frame-src-change-added-to-history-pretty-diff.html
Attachments
Patch (9.29 KB, patch)
2010-06-11 15:29 PDT, Robert Hogan
no flags
Antonio Gomes
Comment 1 2010-03-19 14:34:10 PDT
I can have a look during the weekend.
Csaba Osztrogonác
Comment 2 2010-03-19 14:39:57 PDT
(In reply to comment #1) > I can have a look during the weekend. Thx. I skipped it to make bot happier: http://trac.webkit.org/changeset/56269
Darin Fisher (:fishd, Google)
Comment 3 2010-04-13 22:51:23 PDT
These tests seem to be failing for similar reasons: fast/loader/frame-src-change-not-added-to-history.html fast/loader/frame-location-change-not-added-to-history.html
Csaba Osztrogonác
Comment 4 2010-04-13 23:10:14 PDT
(In reply to comment #3) > These tests seem to be failing for similar reasons: > fast/loader/frame-src-change-not-added-to-history.html > fast/loader/frame-location-change-not-added-to-history.html Skipped by http://trac.webkit.org/changeset/57560 , thx for it.
Robert Hogan
Comment 5 2010-06-11 15:29:22 PDT
WebKit Commit Bot
Comment 6 2010-06-12 00:36:16 PDT
Comment on attachment 58513 [details] Patch Clearing flags on attachment: 58513 Committed r61056: <http://trac.webkit.org/changeset/61056>
WebKit Commit Bot
Comment 7 2010-06-12 00:36:24 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.