2010-06-12  Robert Hogan  <robert@webkit.org>

Reviewed by Kenneth Rohde Christiansen.

        [Qt] Back-forward list dumping is incorrect

        https://bugs.webkit.org/show_bug.cgi?id=36392

        Support dumping child history items in DRT.

        Unskip:

        fast/loader/frame-src-change-added-to-history.html
        fast/loader/frame-src-change-not-added-to-history.html
        fast/loader/frame-location-change-not-added-to-history.html

        * platform/qt/Skipped:
2010-06-12  Robert Hogan  <robert@webkit.org>

        Reviewed by Kenneth Rohde Christiansen.

        [Qt] Back-forward list dumping is incorrect

        https://bugs.webkit.org/show_bug.cgi?id=36392

        Support dumping child history items in DRT.

        Unskip:

        fast/loader/frame-src-change-added-to-history.html
        fast/loader/frame-src-change-not-added-to-history.html
        fast/loader/frame-location-change-not-added-to-history.html

        * Api/qwebhistory.cpp:
        (QWebHistoryItemPrivate::core):
        * Api/qwebhistory.h:
        * Api/qwebhistory_p.h:
        * WebCoreSupport/DumpRenderTreeSupportQt.cpp:
        (DumpRenderTreeSupportQt::isTargetItem):
        (DumpRenderTreeSupportQt::historyItemTarget):
        (DumpRenderTreeSupportQt::getChildHistoryItems):
        * WebCoreSupport/DumpRenderTreeSupportQt.h:
2010-06-12  Robert Hogan  <robert@webkit.org>

        Reviewed by Kenneth Rohde Christiansen.

        [Qt] Back-forward list dumping is incorrect

        https://bugs.webkit.org/show_bug.cgi?id=36392

        Support dumping child history items in DRT.

        Unskip:

        fast/loader/frame-src-change-added-to-history.html
        fast/loader/frame-src-change-not-added-to-history.html
        fast/loader/frame-location-change-not-added-to-history.html

        * DumpRenderTree/qt/DumpRenderTreeQt.cpp:
        (WebCore::dumpHistoryItem):

Canonical link: https://commits.webkit.org/52071@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@61056 268f45cc-cd09-0410-ab3c-d52691b4dbfc