WebKit/qt/Api/qwebhistory.cpp
@@ -555,3 +555,8 @@ QWebPagePrivate* QWebHistoryPrivate::page()
 {
     return QWebFramePrivate::kit(lst->page()->mainFrame())->page()->handle();
 }
+
+WebCore::HistoryItem* QWebHistoryItemPrivate::core(QWebHistoryItem* q)
+{
+    return q->d->item;
+}
