WebKit/qt/Api/qwebhistory_p.h
@@ -45,6 +45,8 @@ public:
             item->deref();
     }
 
+    static WebCore::HistoryItem* core(QWebHistoryItem* q);
+
     WebCore::HistoryItem* item;
 };
 
